# WinCaptureSync

./: .gitignore  Agents.md  CMakeLists.txt  LICENSE  README.md  README_CN.md  Readme_EN.md
docs/: formats.md  sync.md
src/capture/: capture_source.cpp  capture_source.h  screen_recorder.cpp  screen_recorder.h  wgc_frame_grabber.cpp  wgc_frame_grabber.h
src/common/: json_utils.h  logger.cpp  logger.h  runtime_diagnostics.cpp  runtime_diagnostics.h
src/encode/: mf_h264_encoder.cpp  mf_h264_encoder.h
src/gui/: main_window.cpp  main_window.h  window_selector.cpp  window_selector.h
src/input/: input_queue.h  input_recorder.cpp  input_recorder.h  input_types.h  input_writer.cpp  input_writer.h
src/main/: app_controller.cpp  app_controller.h  config.cpp  config.h  main.cpp  session_paths.cpp  session_paths.h
src/time/: time_utils.cpp  time_utils.h
tests/: time_tests.cpp
tools/: align_timeline.ps1
